# JTAG_Tester

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/adapters/: __init__.py
src/adapters/ft2232h/: __init__.py  detector.py  transport.py
src/app/: __init__.py  __main__.py  _metadata.py  logging_setup.py  main.py
src/app/cli/: __init__.py  main.py
src/app/gui/: __init__.py  about_dialog.py  main_window.py
src/core/: __init__.py
src/core/adiv5/: __init__.py  adiv5.py  constants.py
src/core/swd/: __init__.py  errors.py  protocol.py
src/sim/: __init__.py  simulated_probe.py  swd_transport.py
tests/: conftest.py
tests/gui/: test_main_window.py
tests/hardware/: conftest.py  test_ft2232h_swd.py
tests/unit/: test_adiv5.py  test_simulated_probe.py  test_swd_protocol.py
